// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator with one page renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Paginator
    base="test"
    numPages={1}
    page={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): false,
  Symbol(enzyme.__nodes__): Array [
    false,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Paginator with three pages on the first page renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Paginator
    base="/"
    numPages={3}
    page={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <ul
        css={
          Object {
            "display": "block",
            "li": Object {
              "a": Object {
                "backgroundImage": "none",
              },
              "display": "inline-block",
              "marginBottom": 0,
              "marginRight": "1rem",
            },
            "listStyleType": "none",
            "margin": 0,
          }
        }
      >
        <React.Fragment>
          <li>
            «
          </li>
          <li>
            ‹
          </li>
        </React.Fragment>
        <li>
          1
        </li>
        <li>
          <Link
            href="/page/2"
          >
            2
          </Link>
        </li>
        <li>
          <Link
            href="/page/3"
          >
            3
          </Link>
        </li>
        <React.Fragment>
          <li>
            <Link
              href="/page/2"
            >
              ›
            </Link>
          </li>
          <li>
            <Link
              href="/page/3"
            >
              »
            </Link>
          </li>
        </React.Fragment>
      </ul>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <React.Fragment>
            <li>
              «
            </li>
            <li>
              ‹
            </li>
          </React.Fragment>,
          Array [
            <li>
              1
            </li>,
            <li>
              <Link
                href="/page/2"
              >
                2
              </Link>
            </li>,
            <li>
              <Link
                href="/page/3"
              >
                3
              </Link>
            </li>,
          ],
          <React.Fragment>
            <li>
              <Link
                href="/page/2"
              >
                ›
              </Link>
            </li>
            <li>
              <Link
                href="/page/3"
              >
                »
              </Link>
            </li>
          </React.Fragment>,
        ],
        "css": Object {
          "display": "block",
          "li": Object {
            "a": Object {
              "backgroundImage": "none",
            },
            "display": "inline-block",
            "marginBottom": 0,
            "marginRight": "1rem",
          },
          "listStyleType": "none",
          "margin": 0,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <li>
                «
              </li>,
              <li>
                ‹
              </li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "«",
              },
              "ref": null,
              "rendered": "«",
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "‹",
              },
              "ref": null,
              "rendered": "‹",
              "type": "li",
            },
          ],
          "type": Symbol(react.fragment),
        },
        Object {
          "instance": null,
          "key": "paginate-0",
          "nodeType": "host",
          "props": Object {
            "children": 1,
          },
          "ref": null,
          "rendered": 1,
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "paginate-1",
          "nodeType": "host",
          "props": Object {
            "children": <Link
              href="/page/2"
            >
              2
            </Link>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": 2,
              "href": "/page/2",
            },
            "ref": null,
            "rendered": 2,
            "type": [Function],
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "paginate-2",
          "nodeType": "host",
          "props": Object {
            "children": <Link
              href="/page/3"
            >
              3
            </Link>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": 3,
              "href": "/page/3",
            },
            "ref": null,
            "rendered": 3,
            "type": [Function],
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <li>
                <Link
                  href="/page/2"
                >
                  ›
                </Link>
              </li>,
              <li>
                <Link
                  href="/page/3"
                >
                  »
                </Link>
              </li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  href="/page/2"
                >
                  ›
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "›",
                  "href": "/page/2",
                },
                "ref": null,
                "rendered": "›",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  href="/page/3"
                >
                  »
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "»",
                  "href": "/page/3",
                },
                "ref": null,
                "rendered": "»",
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": Symbol(react.fragment),
        },
      ],
      "type": "ul",
    },
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ul
          css={
            Object {
              "display": "block",
              "li": Object {
                "a": Object {
                  "backgroundImage": "none",
                },
                "display": "inline-block",
                "marginBottom": 0,
                "marginRight": "1rem",
              },
              "listStyleType": "none",
              "margin": 0,
            }
          }
        >
          <React.Fragment>
            <li>
              «
            </li>
            <li>
              ‹
            </li>
          </React.Fragment>
          <li>
            1
          </li>
          <li>
            <Link
              href="/page/2"
            >
              2
            </Link>
          </li>
          <li>
            <Link
              href="/page/3"
            >
              3
            </Link>
          </li>
          <React.Fragment>
            <li>
              <Link
                href="/page/2"
              >
                ›
              </Link>
            </li>
            <li>
              <Link
                href="/page/3"
              >
                »
              </Link>
            </li>
          </React.Fragment>
        </ul>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <React.Fragment>
              <li>
                «
              </li>
              <li>
                ‹
              </li>
            </React.Fragment>,
            Array [
              <li>
                1
              </li>,
              <li>
                <Link
                  href="/page/2"
                >
                  2
                </Link>
              </li>,
              <li>
                <Link
                  href="/page/3"
                >
                  3
                </Link>
              </li>,
            ],
            <React.Fragment>
              <li>
                <Link
                  href="/page/2"
                >
                  ›
                </Link>
              </li>
              <li>
                <Link
                  href="/page/3"
                >
                  »
                </Link>
              </li>
            </React.Fragment>,
          ],
          "css": Object {
            "display": "block",
            "li": Object {
              "a": Object {
                "backgroundImage": "none",
              },
              "display": "inline-block",
              "marginBottom": 0,
              "marginRight": "1rem",
            },
            "listStyleType": "none",
            "margin": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <li>
                  «
                </li>,
                <li>
                  ‹
                </li>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "«",
                },
                "ref": null,
                "rendered": "«",
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "‹",
                },
                "ref": null,
                "rendered": "‹",
                "type": "li",
              },
            ],
            "type": Symbol(react.fragment),
          },
          Object {
            "instance": null,
            "key": "paginate-0",
            "nodeType": "host",
            "props": Object {
              "children": 1,
            },
            "ref": null,
            "rendered": 1,
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "paginate-1",
            "nodeType": "host",
            "props": Object {
              "children": <Link
                href="/page/2"
              >
                2
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 2,
                "href": "/page/2",
              },
              "ref": null,
              "rendered": 2,
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "paginate-2",
            "nodeType": "host",
            "props": Object {
              "children": <Link
                href="/page/3"
              >
                3
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 3,
                "href": "/page/3",
              },
              "ref": null,
              "rendered": 3,
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <li>
                  <Link
                    href="/page/2"
                  >
                    ›
                  </Link>
                </li>,
                <li>
                  <Link
                    href="/page/3"
                  >
                    »
                  </Link>
                </li>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    href="/page/2"
                  >
                    ›
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "›",
                    "href": "/page/2",
                  },
                  "ref": null,
                  "rendered": "›",
                  "type": [Function],
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    href="/page/3"
                  >
                    »
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "»",
                    "href": "/page/3",
                  },
                  "ref": null,
                  "rendered": "»",
                  "type": [Function],
                },
                "type": "li",
              },
            ],
            "type": Symbol(react.fragment),
          },
        ],
        "type": "ul",
      },
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Paginator with three pages on the last page renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Paginator
    base="/"
    numPages={3}
    page={3}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <ul
        css={
          Object {
            "display": "block",
            "li": Object {
              "a": Object {
                "backgroundImage": "none",
              },
              "display": "inline-block",
              "marginBottom": 0,
              "marginRight": "1rem",
            },
            "listStyleType": "none",
            "margin": 0,
          }
        }
      >
        <React.Fragment>
          <li>
            <Link
              href="/"
            >
              «
            </Link>
          </li>
          <li>
            <Link
              href="/page/2"
            >
              ‹
            </Link>
          </li>
        </React.Fragment>
        <li>
          <Link
            href="/"
          >
            1
          </Link>
        </li>
        <li>
          <Link
            href="/page/2"
          >
            2
          </Link>
        </li>
        <li>
          3
        </li>
        <React.Fragment>
          <li>
            ›
          </li>
          <li>
            »
          </li>
        </React.Fragment>
      </ul>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <React.Fragment>
            <li>
              <Link
                href="/"
              >
                «
              </Link>
            </li>
            <li>
              <Link
                href="/page/2"
              >
                ‹
              </Link>
            </li>
          </React.Fragment>,
          Array [
            <li>
              <Link
                href="/"
              >
                1
              </Link>
            </li>,
            <li>
              <Link
                href="/page/2"
              >
                2
              </Link>
            </li>,
            <li>
              3
            </li>,
          ],
          <React.Fragment>
            <li>
              ›
            </li>
            <li>
              »
            </li>
          </React.Fragment>,
        ],
        "css": Object {
          "display": "block",
          "li": Object {
            "a": Object {
              "backgroundImage": "none",
            },
            "display": "inline-block",
            "marginBottom": 0,
            "marginRight": "1rem",
          },
          "listStyleType": "none",
          "margin": 0,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <li>
                <Link
                  href="/"
                >
                  «
                </Link>
              </li>,
              <li>
                <Link
                  href="/page/2"
                >
                  ‹
                </Link>
              </li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  href="/"
                >
                  «
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "«",
                  "href": "/",
                },
                "ref": null,
                "rendered": "«",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  href="/page/2"
                >
                  ‹
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "‹",
                  "href": "/page/2",
                },
                "ref": null,
                "rendered": "‹",
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": Symbol(react.fragment),
        },
        Object {
          "instance": null,
          "key": "paginate-0",
          "nodeType": "host",
          "props": Object {
            "children": <Link
              href="/"
            >
              1
            </Link>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": 1,
              "href": "/",
            },
            "ref": null,
            "rendered": 1,
            "type": [Function],
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "paginate-1",
          "nodeType": "host",
          "props": Object {
            "children": <Link
              href="/page/2"
            >
              2
            </Link>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": 2,
              "href": "/page/2",
            },
            "ref": null,
            "rendered": 2,
            "type": [Function],
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "paginate-2",
          "nodeType": "host",
          "props": Object {
            "children": 3,
          },
          "ref": null,
          "rendered": 3,
          "type": "li",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <li>
                ›
              </li>,
              <li>
                »
              </li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "›",
              },
              "ref": null,
              "rendered": "›",
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "»",
              },
              "ref": null,
              "rendered": "»",
              "type": "li",
            },
          ],
          "type": Symbol(react.fragment),
        },
      ],
      "type": "ul",
    },
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ul
          css={
            Object {
              "display": "block",
              "li": Object {
                "a": Object {
                  "backgroundImage": "none",
                },
                "display": "inline-block",
                "marginBottom": 0,
                "marginRight": "1rem",
              },
              "listStyleType": "none",
              "margin": 0,
            }
          }
        >
          <React.Fragment>
            <li>
              <Link
                href="/"
              >
                «
              </Link>
            </li>
            <li>
              <Link
                href="/page/2"
              >
                ‹
              </Link>
            </li>
          </React.Fragment>
          <li>
            <Link
              href="/"
            >
              1
            </Link>
          </li>
          <li>
            <Link
              href="/page/2"
            >
              2
            </Link>
          </li>
          <li>
            3
          </li>
          <React.Fragment>
            <li>
              ›
            </li>
            <li>
              »
            </li>
          </React.Fragment>
        </ul>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <React.Fragment>
              <li>
                <Link
                  href="/"
                >
                  «
                </Link>
              </li>
              <li>
                <Link
                  href="/page/2"
                >
                  ‹
                </Link>
              </li>
            </React.Fragment>,
            Array [
              <li>
                <Link
                  href="/"
                >
                  1
                </Link>
              </li>,
              <li>
                <Link
                  href="/page/2"
                >
                  2
                </Link>
              </li>,
              <li>
                3
              </li>,
            ],
            <React.Fragment>
              <li>
                ›
              </li>
              <li>
                »
              </li>
            </React.Fragment>,
          ],
          "css": Object {
            "display": "block",
            "li": Object {
              "a": Object {
                "backgroundImage": "none",
              },
              "display": "inline-block",
              "marginBottom": 0,
              "marginRight": "1rem",
            },
            "listStyleType": "none",
            "margin": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <li>
                  <Link
                    href="/"
                  >
                    «
                  </Link>
                </li>,
                <li>
                  <Link
                    href="/page/2"
                  >
                    ‹
                  </Link>
                </li>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    href="/"
                  >
                    «
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "«",
                    "href": "/",
                  },
                  "ref": null,
                  "rendered": "«",
                  "type": [Function],
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    href="/page/2"
                  >
                    ‹
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "‹",
                    "href": "/page/2",
                  },
                  "ref": null,
                  "rendered": "‹",
                  "type": [Function],
                },
                "type": "li",
              },
            ],
            "type": Symbol(react.fragment),
          },
          Object {
            "instance": null,
            "key": "paginate-0",
            "nodeType": "host",
            "props": Object {
              "children": <Link
                href="/"
              >
                1
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 1,
                "href": "/",
              },
              "ref": null,
              "rendered": 1,
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "paginate-1",
            "nodeType": "host",
            "props": Object {
              "children": <Link
                href="/page/2"
              >
                2
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 2,
                "href": "/page/2",
              },
              "ref": null,
              "rendered": 2,
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "paginate-2",
            "nodeType": "host",
            "props": Object {
              "children": 3,
            },
            "ref": null,
            "rendered": 3,
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <li>
                  ›
                </li>,
                <li>
                  »
                </li>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "›",
                },
                "ref": null,
                "rendered": "›",
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "»",
                },
                "ref": null,
                "rendered": "»",
                "type": "li",
              },
            ],
            "type": Symbol(react.fragment),
          },
        ],
        "type": "ul",
      },
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
